# pipeline-info-watcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pipeline-info-watcher.cabal
app/: Main.hs
src/: PipelineWatcher.hs
src/Data/: Git.hs
src/Data/Either/: Utils.hs
src/Data/Gitlab/: ApiReader.hs
src/Data/List/: FixedList.hs
