name:                pipeline-info-watcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wselfjes/pipeline-info-watcher#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Chertkov
maintainer:          andreychertckov@gmail.com
copyright:           2021 Andrey Chertkov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pipeline-info-watcher
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
