cabal-version:      2.4
name:               pipeline-info-watcher
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             wself
maintainer:         andreychertckov@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: PipelineWatcher, Data.Git, Data.List.FixedList, Data.Either.Utils, Data.Gitlab.ApiReader

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      req >= 3.9.2,
      aeson >= 2.0.1.0,
      scientific >= 0.3.7.0,
      text >= 1.2.4.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable pipeline-info-watcher
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        req >= 3.9.2,
        text >= 1.2.4.1,
        scientific >= 0.3.7.0,
        pipeline-info-watcher

    hs-source-dirs:   app
    default-language: Haskell2010
